tests/snapshots/cli_help__cli_help_raw.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Send an authenticated request straight to Microsoft Graph, for debugging

Usage: ms-todo raw [OPTIONS] <METHOD> <PATH>

Arguments:
  <METHOD>  HTTP method. POST, PATCH and DELETE are never resent once they may have reached Graph [possible values: GET, POST, PATCH, DELETE]
  <PATH>    Path under https://graph.microsoft.com/v1.0, such as /me/todo/lists

Options:
      --body <JSON>          JSON request body, for POST and PATCH
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --yes                  Send a POST, PATCH or DELETE when not in a terminal
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
