tests/snapshots/cli_help__cli_help_reschedule.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Move open tasks to a new due date: the overdue ones, those due before a day, or the ones named. One `undo` puts them all back

Usage: ms-todo reschedule [OPTIONS] --to <WHEN> <TASK|--overdue|--due-before <WHEN>>

Arguments:
  [TASK]...  Task IDs from `tasks list`, or exact titles when --list is given. `-` reads IDs from stdin, one per line

Options:
      --format <FORMAT>        Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --overdue                Every open task due before today
      --due-before <WHEN>      Every open task due before this day: fri, next mon, +1w, 2026-10-02
      --instance <NAME>        Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --folder <FOLDER>        With --overdue or --due-before: only the lists in this folder
      --fresh                  Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                  Print nothing on stderr but errors: no notes and no progress
      --to <WHEN>              The new due date: today, tomorrow, fri, next mon, +3d, 12 oct, 2026-10-02
      --list <NAME|ID>         Only tasks in this list (exact name or ID), which also lets TASK be an exact title
      --no-color               No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>    Read this command in this context (from config.toml) rather than the active one; `none` for every list
      --dry-run                Show which tasks would move without changing anything
      --yes                    Move several tasks without asking. Off a terminal, moving more than one needs it
      --idempotency-key <KEY>  Run this change at most once: repeating the command with the same key returns the first result for 24 hours, and the same key with a different change exits 2
  -h, --help                   Print help
  -V, --version                Print version
