tests/snapshots/cli_help__cli_help_root.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
A local-first, keyboard-native terminal client for Microsoft To Do

Usage: ms-todo [OPTIONS] [COMMAND]

Commands:
  auth         Sign in to Microsoft, check the sign-in, or sign out
  lists        Your task lists, and which folder each is in
  folders      Folders that group your lists, as in the To Do app. Only ms-todo sees them, on every machine it runs on
  tasks        Tasks in a list
  waiting      Tasks you're waiting on: every open task with an assignee, grouped by person. The same as `tasks list --assignee '*'`, or with PERSON, `tasks list --assignee PERSON`
  myday        Plan today: the tasks in My Day, what could go in it, and taking them in and out. A task with no due date is due today while it's there, so the To Do app shows it in its own My Day too
  steps        A task's steps: list, add, rename, check, uncheck and delete them. A step is named by its number from 1 (as `steps list` shows them), its ID, or its exact text
  links        A task's link (its linked resource): list, add, change or delete it. Microsoft To Do allows one per task; `tasks links` also lists the URLs in the notes
  attachments  A task's files: list, attach, download and delete them. An attachment is named by its number from 1 (as `attachments list` shows them), its ID, or its exact name. Files go by path: the daemon reads and writes them
  categories   Your Outlook categories: list, create, recolour and delete them. Microsoft To Do can't rename one; the iPhone app shows none
  extensions   Open extensions on a list or task: data other apps (or you) keep there. ms-todo's own, com.planetaryescape.mstodo, can be read but not written here
  search       Find tasks by the words in their title or notes, in every list, best match first
  done         What you completed, by day, newest first: for a standup or a weekly review. Microsoft To Do keeps the day of a completion, not its time
  next         What to do now: the few open tasks that matter most, each with why. Overdue first (most overdue first), then due today, in My Day, high importance, due within 3 days, then the oldest. Deferred and Someday tasks are never next
  reschedule   Move open tasks to a new due date: the overdue ones, those due before a day, or the ones named. One `undo` puts them all back
  outbox       Writes waiting to reach Microsoft To Do, and those that didn't
  undo         Reverse a change: the last one by default, or the one with this op_id
  sync         Refresh the local cache from Microsoft To Do
  doctor       Check sign-in, the daemon, the local cache and each list's sync
  schema       Print the JSON schemas of a command's input and output (every command's without CMD)
  raw          Send an authenticated request straight to Microsoft Graph, for debugging
  tui          Browse and change your tasks in a full-screen, keyboard-driven view (press ? inside for the keys)
  daemon       Start, stop or check the background daemon that talks to Microsoft
  help         Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>  Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>  Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh            Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet            Print nothing on stderr but errors: no notes and no progress
      --no-color         No colour or bold in tables (also NO_COLOR)
  -h, --help             Print help
  -V, --version          Print version
