tests/snapshots/cli_help__cli_help_steps.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
A task's steps: list, add, rename, check, uncheck and delete them. A step is named by its number from 1 (as `steps list` shows them), its ID, or its exact text

Usage: ms-todo steps [OPTIONS] <COMMAND>

Commands:
  list     The task's steps, in order, numbered from 1
  add      Add steps to the end of the task's steps, unchecked, one per TEXT
  edit     Rename a step; it stays checked or unchecked
  check    Check steps off
  uncheck  Mark checked steps as not done again
  delete   Delete steps. Asks first in a terminal; anywhere else it needs --yes
  help     Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
